[package]
name = "uno"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.20.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
pad = "0.1.6"
clap = "2.33.3"